--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,18 @@
 		"url": "https://github.com/Microsoft/vscode-extension-samples"
 	},
 	"dependencies": {
+		"fs": "^0.0.1-security",
+		"minimatch": "^6.1.5",
+		"path": "^0.12.7",
 		"vscode-languageserver": "^7.0.0",
-		"vscode-languageserver-textdocument": "^1.0.4"
+		"vscode-languageserver-textdocument": "^1.0.4",
+		"vscode-uri": "^3.0.7"
 	},
-	"scripts": {}
+	"scripts": {
+		"test": "vitest",
+		"coverage": "vitest run --coverage"
+	},
+	"devDependencies": {
+		"vitest": "^0.27.2"
+	}
 }
