--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"fs": "^0.0.1-security",
 		"minimatch": "^6.1.5",
+		"n-readlines": "^1.0.1",
 		"path": "^0.12.7",
 		"vscode-languageserver": "^7.0.0",
 		"vscode-languageserver-textdocument": "^1.0.4",
